# luxe-digit

./: .dockerignore  .gitignore  CITATION.cff  Dockerfile  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: physics.md
src/luxedigit/: __init__.py  cli.py  ml_extractor.py
src/luxedigit/legacy/: __init__.py  digiManager.py  featureExtractor.py  frontend.py  logger.py  rdataStruct.py  readFromMC.py
tests/: conftest.py  test_ml_extractor.py
