[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "luxe-digit"
version = "0.1.0"
description = "ML-augmented detector digitization pipeline for the LUXE Gamma Beam Profiler"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
authors = [
    { name = "YOUR_FULL_NAME", email = "YOUR_EMAIL" },
]
keywords = ["luxe", "cern", "desy", "particle-physics", "digitization", "geant4", "silicon-strip"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Physics",
]

dependencies = [
    "numpy>=1.26",
    "scipy>=1.12",
    "matplotlib>=3.8",
    "tqdm>=4.66",
    "multipledispatch>=1.0",
    "uproot>=5.3",        # PyROOT-free ROOT I/O fallback
    "awkward>=2.6",
]

[project.optional-dependencies]
ml = [
    "torch>=2.2",
    "scikit-learn>=1.4",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "pre-commit>=3.7",
]
docs = [
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
]

[project.urls]
Homepage = "https://github.com/salthekal/luxe-digit"
Upstream = "https://github.com/pietrog-pd/SimpleDigitizerGP"
Issues = "https://github.com/salthekal/luxe-digit/issues"

[project.scripts]
luxedigit = "luxedigit.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "NPY"]
ignore = ["E501", "N806"]  # allow physics conventions: uppercase variable names

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra --strict-markers --cov=luxedigit --cov-report=term-missing"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true  # ROOT has no stubs

